# rnnoise-cmake

./: CMakeLists.txt
src/: celt_lpc.c  celt_lpc.h  denoise.c  kiss_fft.c  kiss_fft.h  pitch.c  pitch.h
